trunk/Archive2/e2/570b4f1d478f53/output
main.cpp:7:66: error: unknown escape sequence: '\040'
     std :: cout  <<  "cbrt (729) ="  << std :: cbrt ( 729 )  <<  ' \ n ' 
                                                                  ^
main.cpp:7:66: warning: multi-character character constant [-Wmultichar]
main.cpp:8:70: error: unknown escape sequence: '\040'
               <<  "cbrt (-0,125) ="  << std :: cbrt ( - 0.125 )  <<  ' \ n ' ; 
                                                                      ^
main.cpp:8:70: warning: multi-character character constant [-Wmultichar]
main.cpp:10:67: error: unknown escape sequence: '\040'
     std :: cout  <<  "cbrt (-0) ="  << std :: cbrt ( - 0,0 )  <<  ' \ n ' 
                                                                   ^
main.cpp:10:67: warning: multi-character character constant [-Wmultichar]
main.cpp:11:70: error: unknown escape sequence: '\040'
               <<  "cbrt (+ inf) ="  << std :: cbrt ( INFINITY )  <<  ' \ n ' ; 
                                                                      ^
main.cpp:11:70: warning: multi-character character constant [-Wmultichar]
main.cpp: In function 'int principal()':
main.cpp:10:60: error: no matching function for call to 'cbrt(int, int)'
     std :: cout  <<  "cbrt (-0) ="  << std :: cbrt ( - 0,0 )  <<  ' \ n ' 
                                                            ^
main.cpp:10:60: note: candidates are:
In file included from /usr/include/features.h:357:0,
                 from /usr/local/include/c++/4.9.2/x86_64-unknown-linux-gnu/bits/os_defines.h:39,
                 from /usr/local/include/c++/4.9.2/x86_64-unknown-linux-gnu/bits/c++config.h:430,
                 from /usr/local/include/c++/4.9.2/iostream:38,
                 from main.cpp:1:
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:171:1: note: double cbrt(double)
 __MATHCALL (cbrt,, (_Mdouble_ __x));
 ^
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:171:1: note:   candidate expects 1 argument, 2 provided
In file included from main.cpp:2:0:
/usr/local/include/c++/4.9.2/cmath:1226:3: note: constexpr float std::cbrt(float)
   cbrt(float __x)
   ^
/usr/local/include/c++/4.9.2/cmath:1226:3: note:   candidate expects 1 argument, 2 provided
/usr/local/include/c++/4.9.2/cmath:1230:3: note: constexpr long double std::cbrt(long double)
   cbrt(long double __x)
   ^
/usr/local/include/c++/4.9.2/cmath:1230:3: note:   candidate expects 1 argument, 2 provided
/usr/local/include/c++/4.9.2/cmath:1236:5: note: template<class _Tp> constexpr typename __gnu_cxx::__enable_if<std::__is_integer<_Tp>::__value, double>::__type std::cbrt(_Tp)
     cbrt(_Tp __x)
     ^
/usr/local/include/c++/4.9.2/cmath:1236:5: note:   template argument deduction/substitution failed:
main.cpp:10:60: note:   candidate expects 1 argument, 2 provided
     std :: cout  <<  "cbrt (-0) ="  << std :: cbrt ( - 0,0 )  <<  ' \ n ' 
                                                            ^
main.cpp:12:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
